--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,24 @@ public class BaseTest {
         }
     }
 }
+.allure/
+Update
+allure-results/
+src/main/java/maven/pages/BasePage.java
+src/main/java/maven/pages/Registration/
+src/main/java/maven/pages/googleSearch/
+src/main/java/maven/pages/searchByKeyWord/
+src/main/java/maven/pages/utils/
+src/test/java/maven/pages/BaseTest.java
+src/test/java/maven/pages/searchTests/
+src/test/java/maven/pages/storeMainTest/
+src/test/resources/drivers/geckodriver
+target/allure-results/
+target/classes/
+target/generated-sources/
+target/generated-test-sources/
+target/maven-status/
+target/surefire-reports/
+target/test-classes/drivers/
+target/test-classes/lessons/
+target/test-classes/maven/
